<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>XBOXController</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - XBOXController</name>
  <url>http://maven.apache.org</url>
    <dependencies>
        <dependency>
            <groupId>org.example</groupId>
            <artifactId>XBOXController</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>dev.responsive</groupId>
            <artifactId>controller-api</artifactId>
            <version>0.17.0</version>
        </dependency>
        <dependency>
            <groupId>net.java.jinput</groupId>
            <artifactId>linux-plugin</artifactId>
            <version>2.0.11-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>net.java.jinput</groupId>
            <artifactId>jinput</artifactId>
            <version>2.0.9</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
